--- a/backend/dataAccessLayer/framework/pom.xml
+++ b/backend/dataAccessLayer/framework/pom.xml
@@ -47,8 +47,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
 		</dependency>
 	</dependencies>
 
