--- a/backend/dataAccessLayer/framework/src/main/resources/application.properties
+++ b/backend/dataAccessLayer/framework/src/main/resources/application.properties
@@ -1,4 +1,16 @@
 server.port=8888
-spring.datasource.url = jdbc:mysql://localhost:8889/guest
-spring.datasource.username = root
-spring.datasource.password = root
+
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=false
+
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username = postgres
+spring.datasource.password = postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Disable feature detection by this undocumented parameter.
+# Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+
+# Because detection is desabled you have to set correct dialect by hand.
+ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
